Update summary text and clarify age reference

--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
       <div id="resultado" class="resultado"></div>
 
       <details>
-        <summary>Como a ferramenta escolhe a linha da tabela</summary>
+        <summary> A ferramenta usa como referência valores pré alinhados com a literatura e fontes confiáveis </summary>
         <div class="detalhes-conteudo">
           <strong>0–11 meses:</strong> usa “0–6m” ou “6–11m”.<br/>
-          <strong>1–12 anos:</strong> usa a linha correspondente ao ano informado (1 a 12).<br/><br/>
+          <strong>1–12 anos:</strong> usa a a referência correspondente ao ano informado (1 a 12).<br/><br/>
           <em>Se a criança estiver “entre” idades, recomenda-se usar o ano completo inferior como referência inicial e ajustar pelo quadro clínico e pela passagem do tubo.</em>
         </div>
       </details>
